--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "react": "18.2.0",
     "react-awesome-reveal": "^4.2.5",
     "react-dom": "18.2.0",
-    "react-icons": "^4.10.1",
-    "react-reveal": "^1.2.2"
+    "react-icons": "^4.10.1"
   }
 }
